# ludan_rk3588_ludan_sdk

./: .gitignore  CLAUDE.md  Deploy_Test_Guide.md  G1_Motor_Controller_Summary.md  MOTOR_ZERO_TEST_GUIDE.md  PROMPT_FOR_LUDAN_AI.md  README_500Hz.md  can_quick_test.sh  test_500hz_system.sh  verify_500hz_simple.sh  zlg_desc.txt
CANFDNET/CANFDNET/: CANFDNET.cpp  CANFDNET.vcxproj  CANFDNET.vcxproj.filters  CMakeLists.txt  Makefile  ReadMe.txt  can_test.cpp  can_test_network.cpp  driver_load.sh  driver_load_bind.sh  linux_compat.h  readme.txt  stdafx.cpp  stdafx.h  targetver.h  usbcanfd.c  usbcanfd.h  zlgcan.h  zlgcan.lib
CANFDNET/CANFDNET/Debug/: CANFDNET.pch  vc120.idb
LINUX_CANFDNET_V1.3.0.5_example/: CMakeLists.txt
LINUX_CANFDNET_V1.3.0.5_example/build_new/: CMakeCache.txt  Makefile  cmake_install.cmake
LINUX_CANFDNET_V1.3.0.5_example/lib/linux_x64/: canfdnet.py  canfdnet_test
LINUX_CANFDNET_V1.3.0.5_example/src/: CANFDNET.APS  CANFDNET.cpp  CANFDNET.def  CANFDNET.h  CANFDNET.rc  Device.cpp  Device.h  NetPacket.cpp  NetPacket.h  common.cpp  log.cpp  log.h
LINUX_CANFDNET_V1.3.0.5_example/src/service/: TcpClient.cpp  TcpClient.h  TcpServer.cpp
LINUX_CANFDNET_V1.3.0.5_example/test/: canfdnet.py  test.cpp  拷贝头文件.bat
LINUX_CANFDNET_V1.3.0.5_example/test/net-dlg-test/: CANFDNET.h  net-tcp.aps  net-tcp.cpp  net-tcp.rc  net-tcp.vcxproj  net-tcp.vcxproj.filters  net-tcpDlg.cpp  resource.h  stdafx.cpp
cantoudp/: CMakeLists.txt  readme.md
cantoudp/config/: motor_params.yaml
cantoudp/include/: motor_config.h
cantoudp/src/: cantoudp.cpp  cantoudp8886.cpp  cantoudpwithtopic.cpp  motor_config.cpp
example/g1/: CMakeLists.txt  lowcmd_listener.py  motor_feedback_logger.py  start_motor_feedback_logger.sh
example/g1/low_level/: .zlg_5min_decode_test.cpp.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists_ROS.txt  CMakeLists_ZCAN.txt  DEBUG_README.md  G1_Ankle_Swing_Debug_Guide.md  Makefile  Makefile.zcan  MotorFeedback.msg  command_monitor.cpp  demo_commands.cpp  deploy_test.cpp  deploy_test_jetson.cpp  deploy_test_rk3588.cpp  enable_motor_publisher.cpp  g1_test.cpp  listen_motor_feedback.py  motor_analysis.md  motor_control_example.cpp  motor_controller.cpp  motor_controller.cpp.work  motor_controller_with_enable.cpp  motor_controller_with_enable.cpp.bak2  motor_controller_with_enable_zhengbi.cpp  motor_enable_usage.md  motor_feedback_subscriber.cpp  state_simulator.cpp  test_ankle_swing.sh  tutorial.md  zlg_5min_decode_test.cpp  zlg_5min_test.cpp  zlg_can_test  zlg_can_test.cpp  zlg_diagnostics  zlg_diagnostics.cpp  zlg_monitor  zlg_monitor.cpp  zlg_stability_test.cpp
example/g1/motor_feedback/: CMakeLists.txt  README.md  build.sh
example/g1/motor_feedback_test/: CMakeLists.txt  build.sh  can_monitor.cpp  motor_feedback_reader.cpp
example/g1/motor_test/: CMakeLists.txt  build.sh
example/g1/motor_test10/: README.md  TIMEOUT_MECHANISM.md  WHY_CONTINUE_SENDING.md  four_port_udp_sender.py  quick_start.sh  send_position_1.py  stop_motors.py  test_all_ports.sh
example/g1/motor_test2/: CMakeLists.txt  full_test.sh  motor_test2.cpp  udp_test_sender.py
example/g1/motor_test3/: CMakeLists.txt  build.sh
example/g1/motor_test4/: CMakeLists.txt
example/g1/motor_test5/: CMakeLists.txt
example/g1/motor_test6/: motor_test6.cpp
example/g1/motor_test7/: CMakeLists.txt
example/g1/motor_test8/: CMakeLists.txt
example/g1/motor_test9/: CMakeLists.txt
multi_port_motor_feedback/: CMakeLists.txt  README.md  localtest.txt
multi_port_motor_feedback/build_ros2/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  can_to_udp_and_ros2  cmake_install.cmake
multi_port_motor_feedback/config/: README.md  motor_test_config.json  motor_test_config_full.json
multi_port_motor_feedback/docs/: can_send_test_guide.md
multi_port_motor_feedback/include/: can_shm.h
multi_port_motor_feedback/install/: local_setup.sh  setup.sh
multi_port_motor_feedback/log/: latest_build
multi_port_motor_feedback/multi_port_motor_feedback_ros2/: CMakeLists.txt  README.md  package.xml
multi_port_motor_feedback/multi_port_motor_feedback_ros2/install/: local_setup.sh  setup.bash  (+3 more)
multi_port_motor_feedback/src/: can_send_test.cpp  motor_heartbeat_monitor.cpp  multi_port_motor_feedback.cpp
scripts/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  MONITORING.md  Makefile  README.md  README_Foxglove.md  can_frequency_test.sh  can_log_analyzer.sh  can_monitor.sh  can_monitor_enhanced_final.sh  can_quick_test.sh  can_visualizer.py  cmake_install.cmake  compatibility_links.sh  dds_topic_lister.sh  dds_topics_monitor.cpp  demo_enhanced_monitor.sh  deploy.sh  deploy_ros1_to_dds.sh  deploy_test.sh  echo_lowcmd.py  enable_motor.py  fox.sh  foxglove_launcher.sh  foxglove_ros2.sh  jetson_lowcmd_publisher.py  launcher.sh  list_dds_topics.sh  listener.sh  listener_8888.py  listener_8888_to_ros2.py  manage_foxglove.sh  monitor_all.sh  monitor_lowcmd.py  monitor_simple.sh  monitor_zhilgong.py  monitor_zhilgong_traffic.sh  motor_test8  motor_test9  (+35 more)
scripts/dds_bridge/: README_BRIDGE_SOLUTIONS.md  can_frequency_test.sh  can_monitor.sh  dds2ros2.sh  dds_cmd.sh  dds_native_cmd.cpp  fox.sh  foxglove_launcher.sh  quick_foxglove.sh  simple_dds_cmd.cpp  sine_curve_publisher.py  unitree_dds_cmd.cpp
scripts/deployment/: JETSON_SETUP_GUIDE.md  deploy_test.sh  deploy_test_rk3588_receiver.sh  start_deploy_jetson.sh  start_deploy_rk3588.sh
scripts/example/: Makefile  cmake_install.cmake
scripts/lowcmd/: jetson_lowcmd_publisher.py  lowcmd_data_example.json  lowcmd_format_examples.md  python_lowcmd_builder.py  start_jetson_lowcmd.sh  test_lowcmd_format.py
scripts/motor_dds_proj/: CMakeLists.txt  package.xml
scripts/ros_integration/: README_ROS1_DDS_BRIDGE.md  deploy_ros1_to_dds.sh  package.xml  ros1_lowcmd_bridge_example.py  ros1_to_dds_bridge.py  test_ros1_dds_communication.py
scripts/rubbish/: dds_to_ros2_converter.py  requirements.txt  setup.py  simple_dds_converter.py  start_converter.sh
scripts/testing/: test_jetson_publisher.py  test_network_connectivity.sh  test_ros2_deploy.sh
(+405 files in other folders)
