<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_dds_proj</name>
  <version>1.0.0</version>
  <description>DDS motor command subscriber for Unitree robots</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cyclonedds</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>