<?xml version="1.0"?>
<package format="2">
  <name>ros1_to_dds_bridge</name>
  <version>1.0.0</version>
  <description>ROS1 to DDS Bridge for RK3588 Communication</description>

  <maintainer email="claude@anthropic.com">Claude Code Assistant</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3</exec_depend>

  <export>
  </export>
</package>